--- a/Neural_Network_in_NP.ipynb
+++ b/Neural_Network_in_NP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSngN5ldt/KcCnYzgP78VI",
+      "authorship_tag": "ABX9TyPS25G4Rld2HNMxUSDeMHjJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,7 +298,7 @@
       "source": [
         "**Note**\n",
         "\n",
-        "For 2-D arrays, np.dot performs matrix multiplication. For this code to be more readable and explicit in intent:\n",
+        "For 2-D arrays, np.dot performs matrix multiplication. To be more readable and explicit:\n",
         "- **np.matmul()** is used for matrix multiplication\n",
         "- \"*\" is used for element-wise multiplication"
       ],
