Tidying up update

--- a/Neural_Network_in_NP.ipynb
+++ b/Neural_Network_in_NP.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPS25G4Rld2HNMxUSDeMHjJ",
+      "authorship_tag": "ABX9TyMqqWJjm1IbBY/gkp3yZZwp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,31 +309,8 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install wandb -qqq"
-      ],
-      "metadata": {
-        "id": "bbX3qmcPh0Dg"
-      },
-      "execution_count": 156,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Importing mighty NumPy!\n",
-        "import numpy as np\n",
-        "\n",
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "\n",
-        "# Sklearn\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report, accuracy_score, confusion_matrix, ConfusionMatrixDisplay\n",
-        "\n",
-        "# Logging\n",
-        "import wandb\n",
-        "from tqdm import tqdm\n"
+        "import numpy as np"
       ],
       "metadata": {
         "id": "tBFxzWXwcxOC"
@@ -344,6 +321,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# To load the dataset from Colab\n",
+        "import pandas as pd\n",
+        "\n",
         "# Mnist\n",
         "\n",
         "train = pd.read_csv(\"/content/sample_data/mnist_train_small.csv\", header=None)\n",
@@ -389,6 +369,8 @@
       "cell_type": "code",
       "source": [
         "# # Load the MNIST dataset\n",
+        "# from sklearn.model_selection import train_test_split\n",
+        "# from sklearn.datasets import fetch_openml\n",
         "# mnist = fetch_openml('mnist_784', version=1)\n",
         "# X, y = mnist.data, mnist.target\n",
         "\n",
@@ -826,10 +808,27 @@
     {
       "cell_type": "code",
       "source": [
-        "# Log in to your W&B account\n",
+        "%pip install wandb -qqq"
+      ],
+      "metadata": {
+        "id": "tFr2Bmz5QQbg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plots\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Accuracy & Confusion matrix\n",
+        "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+        "\n",
+        "# Logging\n",
         "import wandb\n",
         "from tqdm import tqdm\n",
-        "\n",
         "\n",
         "# Use wandb-core, temporary for wandb's new backend\n",
         "wandb.require(\"core\")\n",
